--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# project ignores
+env/env
+static/
+migrations/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -100,9 +105,6 @@ celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
-
-# Environments
-env/env
 
 # Spyder project settings
 .spyderproject
