--- a/env/requirements.txt
+++ b/env/requirements.txt
@@ -2,6 +2,9 @@ asgiref==3.4.1
 certifi==2021.5.30
 charset-normalizer==2.0.5
 Django==3.2.7
+django-ckeditor==6.1.0
+django-js-asset==1.2.2
+geeks==0.0.0.0a0.dev20210201
 gunicorn==20.1.0
 idna==3.2
 Pillow==8.3.2
