--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "steti",
   "private": true,
+  "proxy": "http://127.0.0.1:8000/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -8,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
