--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-PROJECT_STATE='development'
+PROJECT_STATE='production'
 DEV_API_URL='http://localhost:3000/api/'
-PROD_API_URL='http://api.steti.lviv.ua/'
+PROD_API_URL='http://api.localhost:8000/'
