Configured install.sh file

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 # project ignores
 env/env/
+env/.env
 env/nginx/
 env/systemd/
 migrations/
 backend/static/
 backend/media/
 backend/env/
+backend/.env
+frontend/.env
 
 # Django:
 *.log
@@ -57,3 +60,37 @@ coverage.xml
 *.mo
 *.pot
 .python-version
+
+
+# node
+frontend/node_modules
+frontend/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+frontend/.next/
+frontend/out/
+
+# production
+frontend/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# vercel
+.vercel
