--- a/env/requirements.txt
+++ b/env/requirements.txt
@@ -26,6 +26,7 @@ install==1.3.4
 Markdown==3.3.4
 Pillow==8.4.0
 PyJWT==2.3.0
+python-dotenv==0.19.2
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
 requests==2.26.0
