--- a/env/.env.template
+++ b/env/.env.template
@@ -1,9 +1,23 @@
-DJNAOG_SECRET_KEY='kns-0xywecure8o*i=0azse@^bve=7gqc#ey'
+export BASE_DIR=$( dirname  ${PWD})
 
-JWT_ACCESS_SECRET_KEY='kns-0xywecure8o*i=0azse@^bve=7gqc#ey'
-JWT_REFRESH_SECRET_KEY='kns-0xywecure8o*i=0azse@^bve=7gqc#ey'
+export PROJECT_NAME='STETI'
 
-PROJECT_STATE='development'
+export DOMAIN_NAME='steti.lviv.ua'
 
-PUBLIC_API_URL_DEV='http://127.0.0.1:3333/api'
-PUBLIC_API_URL_PROD='http://127.0.0.1:3333/api'
+export USER_TO_RUN_GUNICORN='petryk'
+
+export DJNAOG_SECRET_KEY='kns-0xywecure8o*i=0azse@^bve=7gqc#ey'
+
+export JWT_ACCESS_SECRET_KEY='kns-0xywecure8o*i=0azse@^bve=7gqc#ey'
+export JWT_REFRESH_SECRET_KEY='kns-0xywecure8o*i=0azse@^bve=7gqc#ey'
+
+export PROJECT_STATE='development'
+
+export DJANGO_PORT=8001
+export NEXT_PORT=3001
+
+export PATH_TO_BACKEND=${BASE_DIR}/backend
+export PATH_TO_FRONTEND=${BASE_DIR}/frontend
+
+export PUBLIC_API_URL_DEV='http://127.0.0.1:3333/api'
+export PUBLIC_API_URL_PROD='http://127.0.0.1:3333/api'
