--- a/env/.env.template
+++ b/env/.env.template
@@ -6,7 +6,7 @@ export DOMAIN_NAME='steti.lviv.ua'
 
 export USER_TO_RUN_GUNICORN='petryk'
 
-export DJNAOG_SECRET_KEY='kns-0xywecure8o*i=0azse@^bve=7gqc#ey'
+export DJANOG_SECRET_KEY='kns-0xywecure8o*i=0azse@^bve=7gqc#ey'
 
 export JWT_ACCESS_SECRET_KEY='kns-0xywecure8o*i=0azse@^bve=7gqc#ey'
 export JWT_REFRESH_SECRET_KEY='kns-0xywecure8o*i=0azse@^bve=7gqc#ey'
