--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "next": "12.0.3",
+    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9"
   },
   "devDependencies": {
     "eslint": "7.32.0",
