--- a/env/requirements.txt
+++ b/env/requirements.txt
@@ -15,16 +15,29 @@ djangocms-admin-style==2.0.2
 djangocms-text-ckeditor==4.0.0
 djangorestframework==3.12.4
 djangorestframework-simplejwt==5.0.0
+flake8==4.0.1
+flake8-builtins==1.5.3
+flake8-commas==2.1.0
+flake8-docstrings==1.6.0
+flake8-import-order==0.18.1
+flake8-polyfill==1.0.2
+flake8-variables-names==0.0.4
 geeks==0.0.0.0a0.dev20210201
 gunicorn==20.1.0
 html5lib==1.1
 idna==3.3
+mccabe==0.6.1
+pep8-naming==0.12.1
 Pillow==8.4.0
+pycodestyle==2.8.0
+pydocstyle==6.1.1
+pyflakes==2.4.0
 PyJWT==2.3.0
 python-dotenv==0.19.2
 pytz==2021.3
 requests==2.26.0
 six==1.16.0
+snowballstemmer==2.2.0
 sqlparse==0.4.2
 urllib3==1.26.7
 webencodings==0.5.1
